...
    static let isSmallDevice = (UIScreen.main.bounds.width <= 320)
    
    static let HomeBaseSize:CGFloat = isSmallDevice ? 26 : 32 // adjusted for screen size
    static let OnOffButtonSize:CGFloat = HomeBaseSize + 2
    static var TextBaseSize : CGFloat = HomeBaseSize + 2

    static let EditSettingsText = "Edit settings."
    
    static var timeFormat: DateFormatter {
        let formatter = DateFormatter()
        formatter.timeStyle = .short;
        formatter.dateStyle = .none;
        return formatter
...
