...
        
        // Identifier to include in your push payload and local notification
        recognitionCategory.identifier = Constants.NotificationCategory
        
        let acceptAction = UIMutableUserNotificationAction()
        acceptAction.identifier = "ACCEPT"
        acceptAction.title = "Done"
        acceptAction.activationMode = .background
        acceptAction.isDestructive = false
        acceptAction.isAuthenticationRequired = false

        let declineAction = UIMutableUserNotificationAction()
        declineAction.identifier = "DECLINE"
...
