...
        scrollView.snp.makeConstraints{ make in
            make.edges.equalTo(0)
        }
        
        let textOffsetFromHeader = 40
        
        let headerViews = createHeaderViews(scrollView, titleText: titleText, doneButtonText: "done", doneButtonAction: #selector(SmartTextViewController.doneButtonPressed(_:)))
        headerLabel = headerViews.headerLabel
        
        // main text view
        textView = UITextView.createCustomTextView()
        scrollView.addSubview(textView)
        
...
